--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             >
           </li>
           <li>
+            <a href="https://github.com/francescofrontera/MLFlow-scala-client" target="_blank"
+              >MLFlow-scala-client (Prototype)</a
+            >
+          </li>
+          <li>
             <a
               href="https://github.com/radicalbit/sbt-dependency-from-file"
               target="_blank"
