--- a/index.html
+++ b/index.html
@@ -30,17 +30,22 @@
             >
           </li>
           <li>
+            <a
+              href="https://github.com/radicalbit/sbt-dependency-from-file"
+              target="_blank"
+              >sbt-dependency-from-file</a>
+          </li>
+          <li>
             <a href="https://github.com/francescofrontera/MLFlow-scala-client" target="_blank"
               >MLFlow-scala-client (Prototype)</a
             >
           </li>
           <li>
-            <a
-              href="https://github.com/radicalbit/sbt-dependency-from-file"
-              target="_blank"
-              >sbt-dependency-from-file</a
+            <a href="https://github.com/francescofrontera/magnolia-protobuf" target="_blank"
+              >Magnolia-Protobuf (Prototype)</a
             >
           </li>
+                    
         </ul>
 
         <h2>Blogposts</h2>
