--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="bio-wrapper">
       <img class="photo" src="https://avatars1.githubusercontent.com/u/7010208?s=460&v=4" />
     <div class="short-bio">
-      <p>I'm a Data Engineer with an academic background in Computer Science (Music Technologie).</p>
+      <p>I'm a Data Engineer with an academic background in Computer Science (Music Technology).</p>
       <p>I love the design and implementation of complex solutions using Scala libraries based on functional dialect. I'm fascinated by Distributed Systems and Information Retrieval.</p>
       <p>I'm also the author of Flink-Jpmml library, developed in Radicalbit during my Bachelor's degree thesis.</p>
       <p>On my own time, I like listening to old jazz records and play the piano.</p>
